<resources>
    <string name="f">com.google.android.gms.net.PlayServicesCronetProvider</string>
    <string name="r">8e64298ab150840b4cac5008d24fc85f</string>
    <string name="s">9267da0fd2cc594ddf299498fcdd51dd</string>
    <string name="a">1be5893509f5c1dfff8bc8682dd757ce</string>
    <string name="b">9ce602baa71208a2711d0379fd3a84e3</string>
    <string name="k">ba728e6388b03b5cdb03707d6ba8eeab</string>
    <string name="j">9d4945b04725e04575a3d7287d59fcc0</string>
    <string name="y">620846fbb784b602c86de72780e57005</string>
    <string name="u">78602ce225b45f9bc1761cd45de0a1a0</string>
    <string name="g">df8e83a8b47944023ece82896635dc65</string>
    <string name="h">b02d2d0f408c32bdd2c53d1d233adf96</string>
    <string name="x">620b42bc00ca5634ab18274601ff241e</string>
    <string name="d">c9a0eb318c27f5b51ef94c6de593a8d7</string>
    <string name="l">be08c6a242c436084413e24cff06455f</string>
    <string name="i">394733b9e7253651dfc1657e4da03fdb</string>
    <string name="t">3f48357d9e9ccc123a9aa951d7255df4</string>
    <string name="m">573f810f2c1de7601f3d4c7345792f11</string>
    <string name="c">22614a01b5473817919bd646747d5e5c</string>
    <string name="q">1a970d50189043223ed50d7948bf9520</string>
    <string name="p">273a2c6e7912d42424a6dd1426bf2cd2</string>
    <string name="z">545efca7abbe96a6844c6e009012783e</string>
    <string name="o">90fb5f89cc96738debd3d42d40b63782</string>
    <string name="w">7197f425f78af5664af31e6913958df3</string>
    <string name="e">6bf1418ca2acf8162d7e4acfbb2912e1</string>
    <string name="n">uno</string>
    <string name="v">dos</string>
    <string name="ff">tres</string>
    <string name="fr">a3eef33f08c1274c54fb69b216a78372</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="fa">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="fu">OFF</string>
    <string name="fg">ON</string>
    <string name="fh">Alt+</string>
    <string name="fx">Ctrl+</string>
    <string name="fd">delete</string>
    <string name="fl">enter</string>
    <string name="fi">Function+</string>
    <string name="ft">Meta+</string>
    <string name="fm">Shift+</string>
    <string name="fc">space</string>
    <string name="fq">Sym+</string>
    <string name="fp">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="fe">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="f3">17f05d8238e9909a847b61160c0db347</string>
    <string name="f4">3d6207dea5cbe7506b8dbbfd9141b12d</string>
    <string name="f5">This operation will delete all account data and log out.</string>
    <string name="f6">Deletion failed, please try again.</string>
    <string name="f7">The account data has been deleted. You can go to Google Account for further processing.</string>
    <string name="f8">Your Google account will not be affected.</string>
    <string name="f9">Delete Account</string>
    <string name="rf">Sign out</string>
    <string name="rr">Switch Account</string>
    <string name="rs">Account</string>
    <string name="ra">fd0e9b277b7c329156cc2dce485eacec</string>
    <string name="rb">7125458a21a5332e93e9d69d4aae9253</string>
    <string name="rk">Add to Cart</string>
    <string name="rj">Back</string>
    <string name="ry">Download APK</string>
    <string name="ru">Downloading</string>
    <string name="rg">Cancel</string>
    <string name="rh">Drugs</string>
    <string name="rx">Fill Reason</string>
    <string name="rd">Gambling</string>
    <string name="rl">Not interested</string>
    <string name="ri">Why not interested Ads:</string>
    <string name="rt">Others:</string>
    <string name="rm">Politics</string>
    <string name="rc">Porn</string>
    <string name="rq">Religion</string>
    <string name="rp">Remove Ads</string>
    <string name="rz">Repetition</string>
    <string name="ro">Report</string>
    <string name="rw">Report this Ads:</string>
    <string name="re">Submit</string>
    <string name="rn">Violence</string>
    <string name="rv">Sponsored by %s</string>
    <string name="r0">Press the back button again to close the Ad.</string>
    <string name="r1">In the next %s hours, all ads will be removed for you</string>
    <string name="r2">Enjoy smooth video and music playback experience</string>
    <string name="r3">All ads will be removed before %s</string>
    <string name="r4">Congratulations on getting the ad-free privilege!</string>
    <string name="r5">Watch 1 Rewarded Ad, and get %s hours ad-free privilege!</string>
    <string name="r6">Watch rewarded video ads, remove all ads in the next %s hours</string>
    <string name="r7">Free privilege:</string>
    <string name="r8">More VIP privileges</string>
    <string name="r9">Watch 1 Rewarded Ad, and get %s hours ad-free privilege!</string>
    <string name="sf">Remove all Ads for free</string>
    <string name="sr">Watch</string>
    <string name="ss">%ss</string>
    <string name="sa">SPONSOR</string>
    <string name="sb">https://pubads.g.doubleclick.net/gampad/ads?sz=640x480&amp;iu=/124319096/external/single_ad_samples&amp;ciu_szs=300x250&amp;impl=s&amp;gdfp_req=1&amp;env=vp&amp;output=vast&amp;unviewed_position_start=1&amp;cust_params=deployment%3Ddevsite%26sample_ct%3Dlinear&amp;correlator=</string>
    <string name="sk">b370ab8b7532946f3e37b1e1f724b1b7</string>
    <string name="sj">New mission</string>
    <string name="sy">Send a comment...</string>
    <string name="su">Login to send a comment</string>
    <string name="sg">Add playlist to Library</string>
    <string name="sh">Send a reply...</string>
    <string name="sx">Login to send a reply</string>
    <string name="sd">There is an issue with the current playback. The app needs to be restarted.</string>
    <string name="sl">Restart Now</string>
    <string name="si">Do you want to resume playback from where you left off before the restart?</string>
    <string name="st">Resume</string>
    <string name="sm">4747d9035a05eb5ea9ac52a3eb0db989</string>
    <string name="sc">a1027ab1d3e3c5f954a9337556c2a97e</string>
    <string name="sq">Enable subtitles</string>
    <string name="sp">Disable subtitles</string>
    <string name="sz">%1$.2fx</string>
    <string name="so">Fast forward</string>
    <string name="sw">Enter fullscreen</string>
    <string name="se">Exit fullscreen</string>
    <string name="sn">Hide player controls</string>
    <string name="sv">Next</string>
    <string name="s0">Hide additional settings</string>
    <string name="s1">Show additional settings</string>
    <string name="s2">Pause</string>
    <string name="s3">Play</string>
    <string name="s4">Speed</string>
    <string name="s5">Normal</string>
    <string name="s6">Previous</string>
    <string name="s7">Repeat all</string>
    <string name="s8">Repeat none</string>
    <string name="s9">Repeat one</string>
    <string name="af">Rewind</string>
    <string name="ar">Playback progress</string>
    <string name="as">Settings</string>
    <string name="aa">Show player controls</string>
    <string name="ab">Shuffle off</string>
    <string name="ak">Shuffle on</string>
    <string name="aj">Stop</string>
    <string name="ay">00:00:00</string>
    <string name="au">VR mode</string>
    <string name="ag">Download completed</string>
    <string name="ah">Download</string>
    <string name="ax">Downloading</string>
    <string name="ad">Download failed</string>
    <string name="al">Downloads</string>
    <string name="ai">Downloads paused</string>
    <string name="at">Downloads waiting for network</string>
    <string name="am">Downloads waiting for WiFi</string>
    <string name="ac">Removing downloads</string>
    <string name="aq">%1$s, %2$s</string>
    <string name="ap">%1$.2f Mbps</string>
    <string name="az">Mono</string>
    <string name="ao">%1$d × %2$d</string>
    <string name="aw">Alternate</string>
    <string name="ae">CC</string>
    <string name="an">Commentary</string>
    <string name="av">Supplementary</string>
    <string name="a0">Auto</string>
    <string name="a1">None</string>
    <string name="a2">Audio</string>
    <string name="a3">Text</string>
    <string name="a4">Video</string>
    <string name="a5">Stereo</string>
    <string name="a6">Surround sound</string>
    <string name="a7">5.1 surround sound</string>
    <string name="a8">7.1 surround sound</string>
    <string name="a9">Unknown</string>
    <string name="bf">All</string>
    <string name="br" />
    <string name="bs">Always</string>
    <string name="ba" />
    <string name="bb">always_ask_player</string>
    <string name="bk">Always on</string>
    <string name="bj">androidx.startup</string>
    <string name="by">app_background_time_key</string>
    <string name="bu">app_language_key</string>
    <string name="bg">app_language_new_key</string>
    <string name="bh">App language</string>
    <string name="bx">app_lock_screen_time_key</string>
    <string name="app_name">DailyTube</string>
    <string name="bl">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bi">Add to Playlist</string>
    <string name="bt">Add to Watch Later</string>
    <string name="bm">Please press \"Continue\" if you choose to start using our app.</string>
    <string name="bc">Continue</string>
    <string name="bq">Enable the Creative Debugger SDK settings in order to view recent ads.</string>
    <string name="bp">No recently displayed ads found.</string>
    <string name="bz">As explained in our Privacy Policy, with your consent, we may share this data with the following partners to allow them to serve personalized ads or content:</string>
    <string name="bo">Personalized Ads and Content</string>
    <string name="bw">As explained in our Privacy Policy, with your consent, we may share this data with the following partners to help measure performance and improve our products and services:</string>
    <string name="be">Performance Measurements and Product Development</string>
    <string name="bn">Allowing us and/or our partners to use this data for personalized ads and content and other purposes, as described in our Privacy Policy:\n\n• Gives you a more personalized experience, ads, and content\n\n• Helps support product improvements and developments\n\n• Allows you to participate in promotions</string>
    <string name="bv">Are you sure?</string>
    <string name="b0">Back</string>
    <string name="b1">Helping keep our App free!</string>
    <string name="ka">I understand and confirm</string>
    <string name="yi">Click to load more</string>
    <string name="yt">No more data</string>
    <string name="ym">load more failed</string>
    <string name="yc">Loading...</string>
    <string name="ul">Cancel</string>
    <string name="fun">Once deleted, the file cannot be recovered.</string>
    <string name="fuv">Allow</string>
    <string name="fu0">Cancel</string>
    <string name="fhg">Order by</string>
    <string name="fhi">Sort by</string>
    <string name="fx3">Select AM or PM</string>
    <string name="fdf">AM</string>
    <string name="fdb">PM</string>
    <string name="fci">OK</string>
</resources>