<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.button.MaterialButtonToggleGroup xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:id="@+id/material_clock_period_toggle" android:background="?attr/uh" android:visibility="gone" android:layout_width="@dimen/xq" android:layout_height="@dimen/xm" android:contentDescription="@string/fx3" android:layout_marginStart="@dimen/xc" app:checkedButton="@+id/material_clock_period_am_button" app:layout_constraintStart_toEndOf="@+id/material_clock_display" app:layout_constraintTop_toTopOf="0" app:selectionRequired="true" app:singleSelection="true">
    <com.google.android.material.button.MaterialButton android:id="@+id/material_clock_period_am_button" android:layout_width="wrap_content" android:text="@string/fdf" android:insetTop="8dp" app:shapeAppearanceOverlay="?attr/fuy" style="?attr/frx"/>
    <com.google.android.material.button.MaterialButton android:id="@+id/material_clock_period_pm_button" android:layout_width="wrap_content" android:text="@string/fdb" android:insetBottom="8dp" app:shapeAppearanceOverlay="?attr/fuy" style="?attr/frx"/>
</com.google.android.material.button.MaterialButtonToggleGroup>
