<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:maxWidth="300dp" android:minWidth="200dp">
    <LinearLayout android:orientation="vertical" android:background="@drawable/fg4" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_margin="12dp" android:elevation="3dp">
        <TextView android:textSize="14sp" android:textColor="#ff212121" android:gravity="center_vertical" android:id="@+id/tv_not_interested" android:background="@drawable/fg3" android:layout_width="match_parent" android:layout_height="48dp" android:text="@string/rl" android:drawableLeft="@drawable/fg7" android:drawablePadding="8dp" android:drawableStart="@drawable/fg7" android:paddingStart="12dp" android:paddingEnd="12dp"/>
        <TextView android:textSize="14sp" android:textColor="#ff212121" android:gravity="center_vertical" android:id="@+id/tv_report" android:background="@drawable/fg3" android:layout_width="match_parent" android:layout_height="48dp" android:text="@string/ro" android:drawableLeft="@drawable/fhr" android:drawablePadding="8dp" android:drawableStart="@drawable/fhr" android:paddingStart="12dp" android:paddingEnd="12dp"/>
        <TextView android:textSize="14sp" android:textColor="#ff212121" android:gravity="center_vertical" android:id="@+id/tv_remove_ads" android:background="@drawable/fg3" android:layout_width="match_parent" android:layout_height="48dp" android:text="@string/rp" android:drawableLeft="@drawable/fhf" android:drawablePadding="8dp" android:drawableStart="@drawable/fhf" android:paddingStart="12dp" android:paddingEnd="12dp"/>
    </LinearLayout>
</LinearLayout>
