<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:tag="layout/fragment_delete_local_media_0" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingStart="25dp" android:paddingEnd="25dp">
    <androidx.constraintlayout.widget.ConstraintLayout android:background="?attr/yg" android:paddingTop="24dp" android:paddingBottom="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingStart="24dp" android:paddingEnd="24dp">
        <TextView android:textSize="16sp" android:textColor="?attr/fdq" android:gravity="start" android:id="@+id/tv_content" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/fun" android:lineSpacingMultiplier="1.2" app:layout_constraintTop_toTopOf="0"/>
        <TextView android:textSize="14sp" android:textStyle="bold" android:textColor="?attr/y9" android:gravity="center" android:id="@+id/tv_positive" android:tag="binding_1" android:layout_width="96dp" android:layout_height="36dp" android:layout_marginTop="18dp" android:text="@string/fuv" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toBottomOf="@+id/tv_content"/>
        <TextView android:textSize="14sp" android:textStyle="bold" android:textColor="?attr/fdm" android:gravity="center" android:id="@+id/tv_negative" android:tag="binding_2" android:layout_width="96dp" android:layout_height="36dp" android:layout_marginTop="18dp" android:text="@string/fu0" android:layout_marginEnd="104dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toBottomOf="@+id/tv_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <include android:layout_width="@dimen/g5" android:layout_height="@dimen/g5" app:layout_constraintBottom_toBottomOf="@+id/layoutLoading" app:layout_constraintEnd_toEndOf="@+id/layoutLoading" app:layout_constraintStart_toStartOf="@+id/layoutLoading" app:layout_constraintTop_toTopOf="@+id/layoutLoading" layout="@layout/t6"/>
</FrameLayout>
