<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:background="?attr/xm" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingStart="20dp" android:paddingEnd="20dp">
    <View android:layout_gravity="center_horizontal" android:id="@+id/sortListTop" android:background="@drawable/x8" android:layout_width="38dp" android:layout_height="4dp" android:layout_marginTop="10dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
    <androidx.appcompat.widget.AppCompatImageView android:id="@+id/sortTopCloseIv" android:visibility="gone" android:layout_width="24dp" android:layout_height="24dp" android:layout_marginTop="14dp" android:layout_marginEnd="14dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toTopOf="0"/>
    <Space android:id="@+id/sortListSpace" android:layout_width="1px" android:layout_height="1px" android:layout_marginEnd="50dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/sortListTop"/>
    <TextView android:textSize="16sp" android:textStyle="bold" android:textColor="?attr/vn" android:id="@+id/sortListType" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12dp" android:text="@string/fhi" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/sortListTop"/>
    <include android:id="@+id/sortListNameType" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="11dp" app:layout_constraintEnd_toStartOf="@+id/sortListSpace" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/sortListType" layout="@layout/mb"/>
    <include android:id="@+id/sortListDateType" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="11dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toEndOf="@+id/sortListSpace" app:layout_constraintTop_toBottomOf="@+id/sortListType" layout="@layout/mb"/>
    <include android:id="@+id/sortListSizeType" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="8dp" app:layout_constraintEnd_toStartOf="@+id/sortListSpace" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/sortListNameType" layout="@layout/mb"/>
    <include android:id="@+id/sortListDurationType" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="8dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toEndOf="@+id/sortListSpace" app:layout_constraintTop_toBottomOf="@+id/sortListDateType" layout="@layout/mb"/>
    <TextView android:textSize="16sp" android:textStyle="bold" android:textColor="?attr/vn" android:id="@+id/sortListOrder" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="@string/fhg" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/sortListDurationType"/>
    <include android:id="@+id/sortListAscOrder" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="11dp" android:layout_marginBottom="23dp" app:layout_constraintBottom_toTopOf="@+id/sort_cancel_btn" app:layout_constraintEnd_toStartOf="@+id/sortListSpace" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/sortListOrder" layout="@layout/mb"/>
    <include android:id="@+id/sortListDescOrder" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="11dp" android:layout_marginBottom="23dp" app:layout_constraintBottom_toTopOf="@+id/sort_ok_btn" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toEndOf="@+id/sortListSpace" app:layout_constraintTop_toBottomOf="@+id/sortListOrder" layout="@layout/mb"/>
    <View android:visibility="gone" android:layout_width="match_parent" android:layout_height="1dp" android:layout_marginBottom="7dp" app:layout_constraintBottom_toTopOf="@+id/sort_cancel_btn" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0"/>
    <TextView android:textSize="14sp" android:textStyle="bold" android:textColor="?attr/fff" android:id="@+id/sort_cancel_btn" android:paddingTop="10dp" android:paddingBottom="10dp" android:visibility="gone" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginBottom="10dp" android:text="@string/ul" android:layout_marginEnd="8dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toStartOf="@+id/sort_ok_btn" app:layout_constraintStart_toStartOf="0"/>
    <TextView android:textSize="14sp" android:textStyle="bold" android:textColor="?attr/ffa" android:id="@+id/sort_ok_btn" android:paddingTop="10dp" android:paddingBottom="10dp" android:visibility="gone" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginBottom="10dp" android:text="@string/fci" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toEndOf="@+id/sort_cancel_btn"/>
</androidx.constraintlayout.widget.ConstraintLayout>
